# Python_Web_Software_Engineering

./: Dockerfile  HW_3_1.py  HW_3_2.py  README.md  WEB_HW_2_1.py  proces.py  pyproject.toml  requirements.txt
Api/: main.py  pyproject.toml
Databases(MongoDB,Redis,RabbitMQ)/HW_8_1/: search_quotes.py
Databases(MongoDB,Redis,RabbitMQ)/HW_8_2/: producer.py
Django/quotes_project/: pyproject.toml
Django_2/quotes_project/: .env
Django_pass(13modul)/: docker-compose.yml
Django_pass(13modul)/quotes_project/: .env
FAST_API(1)/: pyproject.toml
FAST_API(2)/: pyproject.toml
FAST_API(2)/contacts_api/: alembic.ini  pyproject.toml
FAST_API(3)/contacts_api/: test.db
FAST_API(4)Sphinx,Unittest,pytest/: .coverage  Dockerfile  docker-compose.yml  pytest.ini  requirements.txt  test.db
FAST_API(4)Sphinx,Unittest,pytest/contacts_api/: .env  main.py  pytest.ini  test.db
FAST_API(4)Sphinx,Unittest,pytest/docs/: module1.rst
FAST_API(4)Sphinx,Unittest,pytest/source/: conf.py  index.rst
HW_4_1.py/: HW_4  dockerfile  main.py  style.css
HW_5/: chat_server.py
HW_6.py/: create_db.py  query_1.sql  query_2.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  test.sql  university.db
HW_7.py/: create_db.py  database_engine.py  models.py  my_select.py  seeds.py
HW_8.py/: load_data.py  search_quotes.py
ORM SQLAIchemy(SQLalchemy,Alembic,SQlite)/: alembic.ini  create_db.py  database.db  your_database.db
Relational databases(SQL)/: queries.py  query_10.sql  query_3.sql  query_5.sql  university.db
currency_exchange/: api_client.py  main.py  utils.py
(+138 files in other folders)
